--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,11 +1,21 @@
 /**
  * Do not edit directly
- * Generated on Tue, 22 Aug 2023 03:32:26 GMT
+ * Generated on Wed, 06 Sep 2023 04:07:10 GMT
  */
 
 :root {
   --color-success: #40ae6c;
   --color-danger: #c61209;
-  --color-general: #000000;
-  --color-alternate: #ffffff;
+  --color-primary: #a86932;
+  --color-secondary: #ffffff;
+  --color-focus: #4492f2;
+  --typography-headline-font-family: Sans-Serif;
+  --typography-headline-font-size: 16;
+  --typography-headline-font-weight: 500;
+  --typography-body-regular-font-family: Sans-Serif;
+  --typography-body-regular-font-size: 14;
+  --typography-body-regular-font-weight: 400;
+  --typography-body-small-font-family: Sans-Serif;
+  --typography-body-small-font-size: 12;
+  --typography-body-small-font-weight: 400;
 }
